・jiji-pluginのsbiclientにおける、指値、逆指値対応

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+2013-10-11 0.1.5beta1
+    * 指値、逆指値注文をjiji_pluginを介して利用できるようにした（暫定的）
 
 2010-11-07 0.1.5
     * セッションタイムアウト発生時にセッションを再作成してからリトライするように修整
