--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-06-27 0.1.x
+    * Mechanize使用時に、ssl_versionをTLSv1を強制的に使用する様に修正
+
 2013-10-11 0.1.5beta1
     * 指値、逆指値注文をjiji_pluginを介して利用できるようにした（暫定的）
 
